update do header e da navegação
Header Pronto;
Navegação Pronta;
Animação nos links;

--- a/index.html
+++ b/index.html
@@ -1,28 +1,73 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="styles/style.css">
-    <title>Home</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
+  <link rel="stylesheet" href="styles/style.css">
+  <title>Home</title>
 </head>
-<body>
-    <header>
-        <a href=""><img src="images/logo-novaera.png" alt=""></a>
-        <nav>
-            <a href="#">Home</a>
-            <a href="#">Quem Somos</a>
-            <a href="#">Cursos</a>
-            <a href="#">EAD</a>
-            <a href="#">Serviços</a>
-            <a href="#">Contato</a>
-        </nav>
-    </header>
-    <main>
-        <div>
-        </div>
-    </main>
+<body style="height: 200vh;">
+  <header>
+    <a href="index.html"><img src="images/logo-novaera.png" alt="Logo da Nova Era"></a>
+    <nav>
+      <ul>
+        <li>
+          <a href="#">
+            <span class="icon">
+              <ion-icon name="home-outline" size="large"></ion-icon>
+            </span>
+            <span class="text">Home</span>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <span class="icon">
+              <ion-icon name="business-outline" size="large"></ion-icon>
+            </span>
+            <span class="text">Quem Somos</span>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <span class="icon">
+              <ion-icon name="bookmarks-outline" size="large"></ion-icon>
+            </span>
+            <span class="text">Cursos</span>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <span class="icon">
+              <ion-icon name="globe-outline" size="large"></ion-icon>
+            </span>
+            <span class="text">EAD</span>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <span class="icon">
+              <ion-icon name="build-outline" size="large"></ion-icon>
+            </span>
+            <span class="text">Serviços</span>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <span class="icon">
+              <ion-icon name="call-outline" size="large"></ion-icon>
+            </span>
+            <span class="text">Contato</span>
+          </a>
+        </li>
+     </ul>
+   </nav>
+  </header>
+  <main>
+    <div style="background-color: green; height: 50vh;"></div>
+  </main>
 </body>
+<script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </html>
