--- a/index.html
+++ b/index.html
@@ -1,80 +1,38 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="styles/header.css">
-  <link rel="stylesheet" href="styles/mobile.css" media="(max-width: 960px)">
+  <link rel="stylesheet" href="styles/toggle-button-animation.css" media="(min-width: 300px)">
   <title>Home</title>
 </head>
-<body style="height: 200vh;">
+<body>
   <header>
-    <div class="content">
-      <div class="logo-image">
-        <a href="index.html">
-          <img src="images/logo-novaera.png" alt="Logo da Nova Era" class="logo">
-        </a>
+      <div class="header-content">
+      <div class="image">
+        <img src="images/logo-novaera.png" alt="Logo da Empresa">
       </div>
-      <nav>
-        <ul>
-          <li>
-            <a href="#">
-              <span class="text">HOME</span>
-            </a>
-          </li>
-          <li>
-            <a href="#">
-              <span class="text">QUEM SOMOS</span>
-              <span class="icon">
-                <ion-icon name="chevron-forward-outline"></ion-icon>
-              </span>
-            </a>
-          </li>
-          <li>
-            <a href="#">
-              <span class="text">CURSOS</span>
-              <span class="icon">
-                <ion-icon name="chevron-forward-outline"></ion-icon>
-              </span>
-            </a>
-          </li>
-          <li>
-            <a href="#">
-              <span class="text">EAD</span>
-              <span class="icon">
-                <ion-icon name="chevron-forward-outline"></ion-icon>
-              </span>
-            </a>
-          </li>
-          <li>
-            <a href="#">
-              <span class="text">SERVIÇOS</span>
-              <span class="icon">
-                <ion-icon name="chevron-forward-outline"></ion-icon>
-              </span>
-            </a>
-          </li>
-          <li>
-            <a href="#">
-              <span class="text">CONTATO</span>
-            </a>
-          </li>
-        </ul>  
-      </nav>
       <div class="toggle-button">
-        <span class="one"></span>
-        <span class="two"></span>
-        <span class="three"></span>
+        <span></span>
+        <span></span>
+        <span></span>
+      </div>  
+      <div class="menu-section">
+        <nav>
+          <ul>
+            <li><a href="#">HOME</a></li>
+            <li><a href="#">QUEM SOMOS</a></li>
+            <li><a href="#">CURSOS</a></li>
+            <li><a href="#">EAD</a></li>
+            <li><a href="#">SERVIÇOS</a></li>
+            <li><a href="#">CONTATO</a></li>
+          </ul>
+        </nav>          
       </div>
     </div>
   </header>
-  <main>
-    <div style="background-color: green; height: 50vh;"></div>
-  </main>
 </body>
-<script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
-<script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
-<script src="script.js"></script>
+<script src="activate-toggle-button.js"></script>
 </html>
