Mudando a cor do toggle button

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <header>
-      <div class="header-content">
+    <div class="header-content">
       <div class="image">
         <img src="images/logo-novaera.png" alt="Logo da Empresa">
       </div>
@@ -20,19 +20,21 @@
         <span></span>
       </div>  
       <div class="menu-section">
-        <nav>
-          <ul>
-            <li><a href="#">HOME</a></li>
-            <li><a href="#">QUEM SOMOS</a></li>
-            <li><a href="#">CURSOS</a></li>
-            <li><a href="#">EAD</a></li>
-            <li><a href="#">SERVIÇOS</a></li>
-            <li><a href="#">CONTATO</a></li>
-          </ul>
-        </nav>          
-      </div>
+      <nav>
+        <ul>
+          <li><a href="#">HOME</a></li>
+          <li><a href="#">QUEM SOMOS</a></li>
+          <li><a href="#">CURSOS</a></li>
+          <li><a href="#">EAD</a></li>
+          <li><a href="#">SERVIÇOS</a></li>
+          <li><a href="#">CONTATO</a></li>
+        </ul>
+      </nav>          
+  
     </div>
   </header>
+  <main>
+  </main>
 </body>
 <script src="activate-toggle-button.js"></script>
 </html>
