Remodelei o site inteiro

--- a/index.html
+++ b/index.html
@@ -19,18 +19,17 @@
         <span></span>
         <span></span>
       </div>  
-      <div class="menu-section">
-      <nav>
-        <ul>
-          <li><a href="#">HOME</a></li>
-          <li><a href="#">QUEM SOMOS</a></li>
-          <li><a href="#">CURSOS</a></li>
-          <li><a href="#">EAD</a></li>
-          <li><a href="#">SERVIÇOS</a></li>
-          <li><a href="#">CONTATO</a></li>
+      <div class="menu-section"></div>
+      <nav class="menu">
+        <ul class="menu-list">
+          <li class="menu-list-item"><a class="menu-list-item-link" href="#">HOME</a></li>
+          <li class="menu-list-item"><a class="menu-list-item-link" href="#">QUEM SOMOS</a></li>
+          <li class="menu-list-item"><a class="menu-list-item-link" href="#">CURSOS</a></li>
+          <li class="menu-list-item"><a class="menu-list-item-link" href="#">EAD</a></li>
+          <li class="menu-list-item"><a class="menu-list-item-link" href="#">SERVIÇOS</a></li>
+          <li class="menu-list-item"><a class="menu-list-item-link" href="#">CONTATO</a></li>
         </ul>
       </nav>          
-  
     </div>
   </header>
   <main>
