Desenvolvendo o conteudo do site

--- a/index01.html
+++ b/index01.html
@@ -23,6 +23,60 @@
 	</header>
 
 	<main class="principal">
+		<div class="principal-hero">
+			<section class="principal-hero-texto">
+				<h1 class="principal-hero-texto-titulo">Nova Era</h1>
+				<p class="principal-hero-texto-paragrafo">A anos ensinando com qualidade</p>
+			</section>
+		</div>
+
+		<div class="conteudo-principal">
+			<h2 class="conteudo-principal-titulo">Aqui você pode econtrar cursos sobre</h2>
+			<div class="conteudo-principal-cursos">
+				<div class="card-container">
+					<div class="card">
+						<img class="card-imagem" src="images/retroescavadeira-card.jpg" alt="Foto do Cuso">
+						<h4 class="card-titulo">Cusos de Escavadeira</h4>
+						<p class="card-descricao">Curso de Operação de Escavadeiras</p>
+					</div>		
+				</div>
+				<div class="card-container">
+					<div class="card">
+						<img class="card-imagem" src="images/retroescavadeira-card.jpg" alt="Foto do Cuso">
+						<h4 class="card-titulo">Cusos de Escavadeira</h4>
+						<p class="card-descricao">Curso de Operação de Escavadeiras</p>
+					</div>		
+				</div>
+				<div class="card-container">
+					<div class="card">
+						<img class="card-imagem" src="images/retroescavadeira-card.jpg" alt="Foto do Cuso">
+						<h4 class="card-titulo">Cusos de Escavadeira</h4>
+						<p class="card-descricao">Curso de Operação de Escavadeiras</p>
+					</div>		
+				</div>
+				<div class="card-container">
+					<div class="card">
+						<img class="card-imagem" src="images/retroescavadeira-card.jpg" alt="Foto do Cuso">
+						<h4 class="card-titulo">Cusos de Escavadeira</h4>
+						<p class="card-descricao">Curso de Operação de Escavadeiras</p>
+					</div>		
+				</div>
+				<div class="card-container">
+					<div class="card">
+						<img class="card-imagem" src="images/retroescavadeira-card.jpg" alt="Foto do Cuso">
+						<h4 class="card-titulo">Cusos de Escavadeira</h4>
+						<p class="card-descricao">Curso de Operação de Escavadeiras</p>
+					</div>		
+				</div>
+				<div class="card-container">
+					<div class="card">
+						<img class="card-imagem" src="images/retroescavadeira-card.jpg" alt="Foto do Cuso">
+						<h4 class="card-titulo">Cusos de Escavadeira</h4>
+						<p class="card-descricao">Curso de Operação de Escavadeiras</p>
+					</div>		
+				</div>
+			</div>
+		</div>
 	</main>
 
 	<footer class="rodape">
