arrumando umas coisinhas

--- a/index01.html
+++ b/index01.html
@@ -80,7 +80,7 @@
 	</main>
 
 	<footer class="rodape">
-		<p class="rodape-texto">&copy; Feito por Rodrigo Barboni Filho</p>
+		<p class="rodape-texto">&copy; <a class="rodape-link" href="https://github.com/rodrigobarbonifilho">Feito por Rodrigo Barboni Filho</a></p>
 	</footer>
 </body>
 </html>
