--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<title>Página Inicial da Nova Era</title>
 </head>
-<body>
+<body onload="createCard()">
 	<header class="cabecalho">
 		<img class="cabecalho-logo" src="images/logo-novaera.png" alt="Logo da Nova Era - Treinamentos">
 		<nav class="cabecalho-menu"">
@@ -33,62 +33,26 @@
 		<div class="conteudo-principal">
 			<h2 class="conteudo-principal-titulo">Aqui você pode econtrar cursos sobre</h2>
 			<div class="conteudo-principal-cursos">
-				<div class="card-container">
-					<div class="card">
-						<img class="card-imagem" src="images/retroescavadeira-card.jpg" alt="">
-						<h4 class="card-titulo card-texto">Retroescavadeira</h4>
-						<p class="card-descricao card-texto">Curso sobre Operação de Retroescavadeiras</p>
-						<button class="card-btn" onclick="showRetroDiv()"">Saber Mais</button>
-					</div>		
-				</div>
-				<div class="card-container">
-					<div class="card">
-						<img class="card-imagem" src="images/retroescavadeira-card.jpg" alt="">
-						<h4 class="card-titulo card-texto">Cursos de Escavadeira</h4>
-						<p class="card-descricao card-texto">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Esse sapiente eligendi ab accusantium sit repellat non odio</p>
-						<button class="card-btn">Saber Mais</button>
-					</div>		
-				</div>
-				<div class="card-container">
-					<div class="card">
-						<img class="card-imagem" src="images/retroescavadeira-card.jpg" alt="">
-						<h4 class="card-titulo card-texto">Cursos de Escavadeira</h4>
-						<p class="card-descricao card-texto">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Esse sapiente eligendi ab accusantium sit repellat non odio</p>
-						<button class="card-btn">Saber Mais</button>
-					</div>		
-				</div>
-				<div class="card-container">
-					<div class="card">
-						<img class="card-imagem" src="images/retroescavadeira-card.jpg" alt="">
-						<h4 class="card-titulo card-texto">Cursos de Escavadeira</h4>
-						<p class="card-descricao card-texto">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Esse sapiente eligendi ab accusantium sit repellat non odio</p>
-						<button class="card-btn">Saber Mais</button>
-					</div>		
-				</div>
-				<div class="card-container">
-					<div class="card">
-						<img class="card-imagem" src="images/retroescavadeira-card.jpg" alt="">
-						<h4 class="card-titulo card-texto">Cursos de Escavadeira</h4>
-						<p class="card-descricao card-texto">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Esse sapiente eligendi ab accusantium sit repellat non odio</p>
-						<button class="card-btn">Saber Mais</button>
-					</div>		
-				</div>
-				<div class="card-container">
-					<div class="card">
-						<img class="card-imagem" src="images/retroescavadeira-card.jpg" alt="">
-						<h4 class="card-titulo card-texto">Cursos de Escavadeira</h4>
-						<p class="card-descricao card-texto">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Esse sapiente eligendi ab accusantium sit repellat non odio</p>
-						<button class="card-btn">Saber Mais</button>
-					</div>		
-				</div>
 			</div>
 			<div class="conteudo-principal-curso-detalhado">
-				<div class="retroescavadeira hide"></div>
-				<div class="hide"></div>
-				<div class="hide"></div>
-				<div class="hide"></div>
-				<div class="hide"></div>
-				<div class="hide"></div>
+				<div id="retroescavadeira" class="curso-detalhado hide">
+					<h2>Retroescavadeira</h2>
+				</div>
+				<div id="solda" class="hide">
+					<h2>Solda</h2>
+				</div>
+				<div id="empilhadeira" class="curso-detalhado hide">
+					<h2>Empilhadeiras</h2>
+				</div>
+				<div id="formacao" class="curso-detalhado hide">
+					<h2>Manutenção de Máquinas Florestais e Formação de Mecânicos Florestais</h2>
+				</div>
+				<div id="maquinas-florestais" class="curso-detalhado hide">
+					<h2>Máquinas Florestais</h2>
+				</div>
+				<div id="teste" class="curso-detalhado hide">
+					<h2>Este titulo e um Teste, Teste testado com êxito</h2>
+				</div>
 			</div>
 		</div>
 	</main>
@@ -97,5 +61,8 @@
 		<p class="rodape-texto">&copy; <a class="rodape-link" href="https://github.com/rodrigobarbonifilho">Feito por Rodrigo Barboni Filho</a></p>
 	</footer>
 </body>
+
+<script src="showDivs.js"></script>
+<script src="createCards.js"></script>
 
 </html>
