--- a/index.html
+++ b/index.html
@@ -36,9 +36,12 @@
 			</div>
 			<div class="conteudo-principal-curso-detalhado">
 				<div id="retroescavadeira" class="curso-detalhado hide">
-					<h2>Retroescavadeira</h2>
+					<div class="texto-detalhado">
+						<h2>Retroescavadeira</h2>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis necessitatibus, sit quo sunt esse facere deserunt dolorem aliquam voluptatem eligendi soluta dolorum et, doloribus illo tempore amet repudiandae iste molestias. Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis illo, quidem, ratione, officia nulla commodi illum natus id error aliquam nisi? Totam, natus? Dolor assumenda nisi amet nemo sapiente eum?</p>
+					</div>
 				</div>
-				<div id="solda" class="hide">
+				<div id="solda" class="curso-detalhado hide">
 					<h2>Solda</h2>
 				</div>
 				<div id="empilhadeira" class="curso-detalhado hide">
@@ -51,7 +54,7 @@
 					<h2>Máquinas Florestais</h2>
 				</div>
 				<div id="teste" class="curso-detalhado hide">
-					<h2>Este titulo e um Teste, Teste testado com êxito</h2>
+					<h2>Meio Ambiente</h2>
 				</div>
 			</div>
 		</div>
