--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<title>Página Inicial da Nova Era</title>
 </head>
@@ -32,29 +33,43 @@
 
 		<div class="conteudo-principal">
 			<h2 class="conteudo-principal-titulo">Aqui você pode econtrar cursos sobre</h2>
-			<div class="conteudo-principal-cursos">
-			</div>
+			<div class="conteudo-principal-cursos"></div>
 			<div class="conteudo-principal-curso-detalhado">
 				<div id="retroescavadeira" class="curso-detalhado hide">
 					<div class="texto-detalhado">
-						<h2>Retroescavadeira</h2>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis necessitatibus, sit quo sunt esse facere deserunt dolorem aliquam voluptatem eligendi soluta dolorum et, doloribus illo tempore amet repudiandae iste molestias. Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis illo, quidem, ratione, officia nulla commodi illum natus id error aliquam nisi? Totam, natus? Dolor assumenda nisi amet nemo sapiente eum?</p>
+						<h2 class="titulo-detalhado">Retroescavadeira</h2>
+						<p class="descricao-detalhado">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis necessitatibus, sit quo sunt esse facere deserunt dolorem aliquam voluptatem eligendi soluta dolorum et, doloribus illo tempore amet repudiandae iste molestias. Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis illo, quidem, ratione, officia nulla commodi illum natus id error aliquam nisi? Totam, natus? Dolor assumenda nisi amet nemo sapiente eum?</p>
 					</div>
 				</div>
 				<div id="solda" class="curso-detalhado hide">
-					<h2>Solda</h2>
+					<div class="texto-detalhado">
+						<h2 class="titulo-detalhado">Soldas - Tig, Mig, Eletroudos e Massaricos</h2>
+						<p class="descricao-detalhado">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsum, facere! Error, sunt exercitationem accusantium temporibus quae culpa. Eum voluptatibus repudiandae saepe error, repellat sint possimus rem ad doloribus expedita amet. Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores assumenda natus repellat id dolores impedit illo soluta minima voluptate nobis, aspernatur placeat sint at repudiandae tempora unde error iure molestiae?</p>
+					</div>
 				</div>
 				<div id="empilhadeira" class="curso-detalhado hide">
-					<h2>Empilhadeiras</h2>
+					<div class="texto-detalhado">
+						<h2 class="titulo-detalhado">Cursos e Treinamentos</h2>
+						<p class="descricao-detalhado">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Asperiores dignissimos a officiis minus iste necessitatibus delectus praesentium, porro unde debitis suscipit harum! Ut natus minus eius iure veniam eveniet soluta? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corporis accusamus perferendis cupiditate debitis quae doloribus a aut eum! Optio ad suscipit tenetur, commodi earum atque praesentium accusamus error iure distinctio!</p>
+					</div>
 				</div>
 				<div id="formacao" class="curso-detalhado hide">
-					<h2>Manutenção de Máquinas Florestais e Formação de Mecânicos Florestais</h2>
+					<div class="texto-detalhado">
+						<h2 class="titulo-detalhado">Manutenção de Máquinas Florestais e Formação de Mecânicos Florestais</h2>
+						<p class="descricao-detalhado">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore illum, assumenda dolorem nobis qui quibusdam nemo maiores quasi commodi, praesentium eos, voluptatem accusamus autem laboriosam? Amet consectetur dolorum incidunt repellat? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Corporis amet facilis necessitatibus assumenda, consectetur aut repellat ea impedit, numquam omnis accusamus? Eveniet debitis inventore beatae odio. Perspiciatis quisquam officiis quo?</p>
+					</div>
 				</div>
 				<div id="maquinas-florestais" class="curso-detalhado hide">
-					<h2>Máquinas Florestais</h2>
+					<div class="texto-detalhado">
+						<h2 class="titulo-detalhado">Máquinas Florestais</h2>						
+						<p class="descricao-detalhado">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore illum, assumenda dolorem nobis qui quibusdam nemo maiores quasi commodi, praesentium eos, voluptatem accusamus autem laboriosam? Amet consectetur dolorum incidunt repellat? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Corporis amet facilis necessitatibus assumenda, consectetur aut repellat ea impedit, numquam omnis accusamus? Eveniet debitis inventore beatae odio. Perspiciatis quisquam officiis quo?</p>
+					</div>
 				</div>
-				<div id="teste" class="curso-detalhado hide">
-					<h2>Meio Ambiente</h2>
+				<div id="empresa" class="curso-detalhado hide">
+					<div class="texto-detalhado">
+						<h2 class="titulo-detalhado">Meio Ambiente</h2>						
+						<p class="descricao-detalhado">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore illum, assumenda dolorem nobis qui quibusdam nemo maiores quasi commodi, praesentium eos, voluptatem accusamus autem laboriosam? Amet consectetur dolorum incidunt repellat? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Corporis amet facilis necessitatibus assumenda, consectetur aut repellat ea impedit, numquam omnis accusamus? Eveniet debitis inventore beatae odio. Perspiciatis quisquam officiis quo?</p>
+					</div>
 				</div>
 			</div>
 		</div>
