--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
 				<li class="cabecalho-menu-lista-item"><a class="cabecalho-menu-lista-item-link" href="#">CONTATO</a></li>
 			</ul>
 		</nav>
+		<div class="toggle-button">
+			<span class="one"></span>
+			<span class="two"></span>
+			<span class="three"></span>
+		</div>
 	</header>
 
 	<main class="principal">
@@ -71,6 +76,12 @@
 						<p class="descricao-detalhado">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore illum, assumenda dolorem nobis qui quibusdam nemo maiores quasi commodi, praesentium eos, voluptatem accusamus autem laboriosam? Amet consectetur dolorum incidunt repellat? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Corporis amet facilis necessitatibus assumenda, consectetur aut repellat ea impedit, numquam omnis accusamus? Eveniet debitis inventore beatae odio. Perspiciatis quisquam officiis quo?</p>
 					</div>
 				</div>
+				<div id="teoria" class="curso-detalhado hide">
+					<div class="texto-detalhado">
+						<h2 class="titulo-detalhado">Teoria e Prática sobre Eletrônica</h2>						
+						<p class="descricao-detalhado">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore illum, assumenda dolorem nobis qui quibusdam nemo maiores quasi commodi, praesentium eos, voluptatem accusamus autem laboriosam? Amet consectetur dolorum incidunt repellat? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Corporis amet facilis necessitatibus assumenda, consectetur aut repellat ea impedit, numquam omnis accusamus? Eveniet debitis inventore beatae odio. Perspiciatis quisquam officiis quo?</p>
+					</div>
+				</div>
 			</div>
 		</div>
 	</main>
@@ -82,5 +93,6 @@
 
 <script src="showDivs.js"></script>
 <script src="createCards.js"></script>
+<script src="activateToggleButton.js"></script>
 
 </html>
