Otimizando as imagens do site
• Redimensionei as imagens  e mudei o seu formato de png e jpg para webp;
• Comecei a separação do arquivos style.css do index e para um global.css;
• Mudei o border-bottom-right-radius do link no menu de nav para 0px;
• Altereio a altura das imagens detalhadas de 90rem para 60rem

--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
 	<meta name="description" content="Nova Era - Uma empresa que tem como objetivo formar os melhores profissionais florestais, para que cada vez mais possamos garantir mais empregos e profissionais de qualidade">
 	<meta name="keywords" content="Nova Era, Cursos, Retroescavadeira, Solda, Empilhadeira, Mecânicos Florestais, Máquinas Florestais">
 	<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="styles/style.css">
+	<link rel="stylesheet" href="styles/global.css">
 	<title>Página Inicial da Nova Era</title>
 </head>
 <body onload="createCard()">
 	<header class="cabecalho">
-		<img class="cabecalho-logo" src="images/logo-novaera.png" alt="Logo da Nova Era - Treinamentos">
+		<img class="cabecalho-logo" src="images/logo-novaera.webp" alt="Logo da Nova Era - Treinamentos">
 		<nav class="cabecalho-menu">
 			<ul class="cabecalho-menu-lista">
 				<li class="cabecalho-menu-lista-item"><a target="_self" class="cabecalho-menu-lista-item-link" href="#">HOME</a></li>
