--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 <body onload="createCard()">
 	<header class="header">
-		<img class="header__logo" src="images/logo-novaera.webp" alt="Logo da Nova Era - Treinamentos">
+		<a href="index.html"><img class="header__logo" src="images/logo-novaera.webp" alt="Logo da Nova Era - Treinamentos"></a>
 		<nav>
 			<ul class="header__nav__list">
 				<li class="header__nav__list__item"><a target="_self" class="header__nav__list__item__link" href="#">HOME</a></li>
@@ -41,7 +41,7 @@
 		<div class="courses">
 			<h2 id="courses" class="courses__title">Aqui você pode encontrar cursos sobre</h2>
 			<div class="courses__cards js-courses__detailed"></div>
-			<div class="courses__detailed">
+			<div class="courses_detailed">
 				<div id="retroescavadeira" class="courses__detailed hide">
 					<div class="text__detailed">
 						<h2 class="title__detailed">Retroescavadeira</h2>
