--- a/quem-somos.html
+++ b/quem-somos.html
@@ -28,6 +28,7 @@
 					<li class="navbar__li"><a href="#" class="navbar__link">Quem Somos</a></li>
 					<li class="navbar__li"><a href="#" class="navbar__link">Cursos</a></li>
 					<li class="navbar__li"><a href="#" class="navbar__link">Ead</a></li>
+					<li class="navbar__li"><a href="#" class="navbar__link">Serviços</a></li>
 					<li class="navbar__li"><a href="#" class="navbar__link">Contato</a></li>
 				</ul>	
 		</div>
